Control 1: corrección de link

--- a/homework/c_1.html
+++ b/homework/c_1.html
@@ -77,7 +77,7 @@ ul.task-list{list-style: none;}
 </dd>
 <dt>Formato</dt>
 <dd>
-Desarrollar esta tarea en un Rmarkdown, agregando comentarios cuando sea necesario.
+Desarrollar esta tarea en un Rmarkdown generando un <code>.pdf</code>, agregando comentarios cuando sea necesario.
 </dd>
 </dl>
 <section id="objetivo" class="level3">
@@ -96,7 +96,7 @@ Desarrollar esta tarea en un Rmarkdown, agregando comentarios cuando sea necesar
 </ul></li>
 <li><p>Capturar la información de todos los países para pasarla a una data.frame.</p></li>
 <li><p>Listar los nombres de países desde el con menor población al con mayor población.</p></li>
-<li><p>Agregar a la base de datos el dato <code>continente</code> para cada país según la base de datos <a href="homework/c_1_files/countryName_continent.csv">countryName_continent.csv</a> disponible en el repositorio.</p></li>
+<li><p>Agregar a la base de datos el dato <code>continente</code> para cada país según la base de datos <a href="c_1_files/countryName_continent.csv">countryName_continent.csv</a> disponible en el repositorio.</p></li>
 <li><p>Graficar la relación entre superficie (eje x) y población (eje y) coloreando cada país según el continente al que pertenezca según la base de datos <code>continente</code>.</p></li>
 </ol>
 </section>
