--- a/slides/class_2/class_2.html
+++ b/slides/class_2/class_2.html
@@ -17,7 +17,7 @@ class: center, middle, inverse, title-slide
 # Trabajo con listas y expresiones regulares
 ]
 .subtitle[
-## Web Scrapping y acceso a datos desde la web con R
+## Web Scraping y acceso a datos desde la web con R
 ]
 .author[
 ### <br>Cristián Ayala<br> Director DESUC
