--- a/homework/c_1.html
+++ b/homework/c_1.html
@@ -41,7 +41,7 @@ ul.task-list{list-style: none;}
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
 <h1 class="title">Control 1</h1>
-<p class="subtitle lead">Web Scrapping y acceso a datos desde la web con R</p>
+<p class="subtitle lead">Web Scraping y acceso a datos desde la web con R</p>
 </div>
 
 
