Corrección de errores en class 1 y class 2.

--- a/slides/class_2/class_2.html
+++ b/slides/class_2/class_2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Trabajo con listas y expresiones regulares</title>
+    <title>Clase 2: Trabajo con listas y expresiones regulares</title>
     <meta charset="utf-8" />
     <meta name="author" content=" Cristián Ayala  Director DESUC" />
     <script src="libs/header-attrs-2.14/header-attrs.js"></script>
@@ -14,7 +14,7 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# Trabajo con listas y expresiones regulares
+# Clase 2: Trabajo con listas y expresiones regulares
 ]
 .subtitle[
 ## Web Scraping y acceso a datos desde la web con R
