--- a/slides/class_1/class_1.html
+++ b/slides/class_1/class_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Introducción</title>
+    <title>Clase 1: Introducción</title>
     <meta charset="utf-8" />
     <meta name="author" content=" Cristián Ayala  Director DESUC" />
     <script src="libs/header-attrs-2.14/header-attrs.js"></script>
@@ -14,7 +14,7 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# Introducción
+# Clase 1: Introducción
 ]
 .subtitle[
 ## Web Scraping y acceso a datos desde la web con R
@@ -665,11 +665,9 @@ ggplot(df_cyr,
 
 ## En la próximo taller .... 
 
-- Manejo de listas
+- Manejo de listas con [purrr](https://purrr.tidyverse.org)
 
-- [purrr](https://purrr.tidyverse.org)
-
-- dplyr, [operaciones por fila](https://dplyr.tidyverse.org/articles/rowwise.html)
+- Manejo de expresiones regulares con [stringr](https://stringr.tidyverse.org)
 
     
 ---
