Actualización de presentación.

--- a/slides/class_3/class_3.html
+++ b/slides/class_3/class_3.html
@@ -402,7 +402,7 @@ La segunda tabla tiene como id: `#tabla-imagen-perros`
 
 ## Scraping: tabla según id 2
 
-Se debe saber como manejar distintas secciones de los datos.
+Se debe saber cómo manejar distintas secciones de los datos.
 
 
 ```r
@@ -492,7 +492,7 @@ html |&gt; html_elements('a[href]')
 ## [1] &lt;a href="https://www.royalcanin.com/es/dogs/breeds/breed-library"&gt;Bibliot ...
 ```
 
-Selección de todos los elementos con atributo `alt` que contenta la palabra *akita*
+Selección de todos los elementos con atributo `alt` que contenga la palabra *akita*
 
 
 ```r
@@ -642,7 +642,7 @@ df_cat_hojas |&gt;
 
 ---
 
-## En la próximo taller… 
+## En el próximo taller… 
 
 - Ejemplos de captura de sitios web
 
