--- a/homework/c_2.html
+++ b/homework/c_2.html
@@ -108,7 +108,7 @@ Desarrollar esta tarea en un Rmarkdown generando un <code>.pdf</code>, agregando
 <div id="quarto-appendix" class="default"><section class="footnotes footnotes-end-of-document" role="doc-endnotes"><h2 class="anchored quarto-appendix-heading">Notas</h2>
 
 <ol>
-<li id="fn1" role="doc-endnote"><p>Número de películas al omento de haber consulado el sitio para este control.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn1" role="doc-endnote"><p>Número de películas al momento de diseñar este control.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section></div></main>
 <!-- /main column -->
